vpc.tf
resource "aws_vpc" "wordpress" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "WordPress VPC"
  }
}
